<resources>
    <string name="app_name">Backpack</string>
    <string name="backpack">Backpack</string>
    <string name="track_and_rate"><![CDATA[Track&rate]]></string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="sign_in">Sign in</string>
    <string name="login">Login</string>
    <string name="first_name">First name:</string>
    <string name="last_name">Last name:</string>
    <string name="email">Email address:</string>
    <string name="confirm">Confirm:</string>
    <string name="gender">Gender:</string>
    <string name="no_account_yet_create_one">No account yet? Create one.</string>
    <string name="logo">logo</string>
    <string name="phone_number">Phone number</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="title_image_picker">Add image</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="rank">Rank</string>
    <string name="radius">Filters</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="search">Search</string>
    <string name="star">Star</string>
    <string name="people">People</string>
    <string name="everything">Everything</string>
    <string name="places">Places</string>
    <string name="web_page">web page</string>
    <string name="sea_thai_restaurant">SEA Thai Restaurant</string>
    <string name="la_valeriana_17a_sevilla_spain">La Valeriana 17a, Sevilla, Spain</string>
    <string name="_222_202_202">Phone: +222 202 202</string>
    <string name="slika_restorana">Slika restorana</string>
    <string name="telefon_restorana">Telefon restorana</string>
    <string name="web_sajt_restorana">Web sajt restorana</string>
    <string name="see_events">See events</string>
    <string name="added_by">Added by:</string>
    <string name="anne_smith">Anne Smith</string>
    <string name="england">England</string>
    <string name="one_of_the_best_thai_restaurants">One of the best Thai restaurants I have been to in Spain. Ambient is very comfortable and autentique, and the food is delicious. I recomend it to every felow traveler!</string>
    <string name="_3">(3)</string>
    <string name="event_creator_picture">Event creator picture</string>
    <string name="see_gallery">See gallery</string>
    <string name="comments">Comments</string>
    <string name="_dotdot">:</string>
    <string name="_1w_ago">1w ago</string>
    <string name="cancel">Cancel</string>
    <string name="add_comment">Add comment</string>
    <string name="slika">slika</string>
    <string name="gallery">Gallery</string>
    <string name="in_front_of_the_restaurant">In front of the restaurant</string>
    <string name="_7pm">7pm</string>
    <string name="events_list">Events</string>
    <string name="event">Event</string>
    <string name="join">Join</string>
    <string name="anna_rusland_and_3_others_are_going">Anna, Rusland and 3 others are going</string>
    <string name="see">See all</string>
    <string name="tri">+3</string>
    <string name="details">Details:</string>
    <string name="going">Going</string>
    <string name="mail_anne">anne.smith.89@gmail.com</string>
    <string name="_2_hours_ago">2 hours ago</string>
    <string name="add_event">Add Event</string>
    <string name="add_place">Add Place</string>
    <string name="new_place">New Place</string>
    <string name="new_event">New Event</string>
    <string name="where">Where?</string>
    <string name="when">When?</string>
    <string name="add_location">Add location</string>
    <string name="add_new_place">New Place</string>
    <string name="add_picure">Add picture</string>
    <string name="title_activity_main_google_map">Map</string>
    <string name="title_activity_filters">FiltersActivity</string>
    <string name="title_activity_upcoming_events">UpcomingEventsActivity</string>
    <string name="filters">Filters</string>
    <string name="radiuss">Radius</string>
    <string name="tagss">Tags</string>
    <string name="enter_tags">Enter tags:</string>
    <string name="select_radius">Select radius:</string>
    <string name="searchh">search</string>
    <string name="clean_tags">clean tags</string>
    <string name="ok">OK</string>
    <string name="selected_tags">Selected tags:</string>
    <string name="upcoming_events">Upcoming events</string>
    <string name="off">off</string>
    <string name="on">on</string>
    <string name="next">Next</string>



</resources>
