<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/group_home_item" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:checked="true"/>
    </group>

    <group android:id="@+id/group_board_item" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_rank"
            android:title="@string/rank" />
    </group>

    <group android:id="@+id/group_competition_item" android:checkableBehavior="single">

        <item
            android:id="@+id/nav_radius"
            android:title="@string/radius" />

    </group>
    <group android:id="@+id/group_notify_item" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notifications"
            android:title="Notifications"
          />
    </group>

    <group android:id="@+id/group_rank_item" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile" />
    </group>

    <group android:id="@+id/group_settings_item" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:title="Upcoming events" />
    </group>




    <group android:id="@+id/group_bluetooth_item" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_bluetooth"
            android:title="find friends" />
    </group>
    <group android:id="@+id/group_logout_item" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:title="@string/log_out" />
    </group>
    <group android:id="@+id/group_bottom_line" android:checkableBehavior="single" >
        <item android:title=""
            android:checkable="false"
            android:enabled="false" />
    </group>
</menu>
