<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/green_gradient_yellow_linear_1920x1080_c2_ffffe0_006400_a_285_f_14"
    android:orientation="vertical"
    tools:context=".activities.PlacesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tw_place_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:text="@string/sea_thai_restaurant"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tw_place_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/la_valeriana_17a_sevilla_spain"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tw_place_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/_222_202_202"
            android:textColor="@color/white"
            android:textSize="12sp"
            tools:ignore="SmallSp" />

        <ImageView
            android:id="@+id/main_place_image"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/slika_restorana"
            android:src="@drawable/sea_restaurant" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/rectangle_white"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1.5"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="15dp"
                    android:text="@string/added_by"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <ImageView
                    android:id="@+id/iv_creator_picture"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:contentDescription="@string/event_creator_picture"
                    android:inputType="text"
                    android:src="@drawable/pic1"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="15dp"
                    android:text="@string/anne_smith"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:text="@string/england"
                    android:textColor="@color/white"
                    android:textSize="8sp"
                    tools:ignore="SmallSp" />

            </LinearLayout>

            <TextView
                android:id="@+id/creator_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_weight="0.5"
                android:gravity="center_vertical"
                android:text="@string/one_of_the_best_thai_restaurants"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:weightSum="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_events"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_event"
                android:layout_marginEnd="10dp"
                android:layout_height="wrap_content"
                android:background="@color/yellow"
                android:text="@string/see_events" />

            <Button
                android:id="@+id/bt_gallery"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_photo_library"
                android:layout_marginStart="10dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@color/yellow"
                android:gravity="center_vertical"
                android:text="@string/see_gallery"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comments" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_dotdot" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/rectangle_white"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iw_places_add"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_action_add" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:scrollbars="none" />

    </LinearLayout>
</ScrollView>