<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/green_gradient_yellow_linear_1920x1080_c2_ffffe0_006400_a_285_f_14"
    tools:context=".activities.FiltersActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/filters"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/radiuss"
            android:textOff="@string/off"
            android:textOn="@string/on"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/ed_rad_num"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:digits="0123456789"
            android:ems="10"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"
            tools:ignore="LabelFor" />

        <Switch
            android:id="@+id/switch2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/tagss"
            android:textOff="@string/off"
            android:textOn="@string/on"
            android:textSize="20sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/enter_tags"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/et_add_tags"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:ems="10"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:scrollbars="vertical"
                tools:ignore="LabelFor" />

            <Button
                android:id="@+id/btn_ok"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginStart="8dp"
                android:background="@color/colorDarkRed"
                android:onClick="onOkClick"
                android:text="@string/ok"
                android:textColor="@color/white" />
        </LinearLayout>

        <TextView
            android:id="@+id/tags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/selected_tags"
            android:textColor="@color/white"
            android:textSize="14sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_search"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="18dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@color/yellow"
                android:drawableStart="@drawable/ic_action_tick"
                android:text="@string/searchh"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_clean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCleanClick"
                android:text="@string/clean_tags"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>