<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:orientation="horizontal"
    android:background="@drawable/rectangle_white"
    android:baselineAligned="false"
    android:weightSum="3">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_event_creator_image"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/pic1"
            android:contentDescription="@string/event_creator_picture" />

        <TextView
            android:id="@+id/tw_event_creator_name"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:text="@string/anne_smith" />

        <TextView
            android:id="@+id/tw_event_creator_state"
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            android:textColor="@color/white"
            android:textSize="8sp"
            android:text="@string/england"
            tools:ignore="SmallSp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tw_where"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginTop="10dp"
            android:text="@string/in_front_of_the_restaurant"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:ignore="RtlHardcoded,SmallSp" />

        <TextView
            android:id="@+id/tw_when"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="3dp"
            android:layout_marginEnd="3dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:text="@string/_7pm"
            tools:ignore="RtlHardcoded,SmallSp" />

        <TextView
            android:id="@+id/tw_event_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="left"
            android:textSize="16sp"
            android:text="@string/one_of_the_best_thai_restaurants"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

</LinearLayout>