<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="5dp"
    android:layout_marginStart="5dp"
    android:background="@drawable/rectangle_white"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:weightSum="3">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_comment_image"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/event_creator_picture"
            android:src="@drawable/pic1" />

        <TextView
            android:id="@+id/tw_comment_name"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:text="@string/anne_smith"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tw_comment_state"
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            android:text="@string/england"
            android:textColor="@color/white"
            android:textSize="8sp"
            tools:ignore="SmallSp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tw_comment_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:text="@string/one_of_the_best_thai_restaurants"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginBottom="3dp"
            android:layout_marginEnd="3dp"
            android:text="@string/_1w_ago"
            android:textColor="@color/white"
            android:textSize="10sp"
            tools:ignore="RtlHardcoded,SmallSp" />


    </LinearLayout>

</LinearLayout>